--- a/java/amazon-kinesis-producer-sample/pom.xml
+++ b/java/amazon-kinesis-producer-sample/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.amazonaws</groupId>
+    <groupId>software.amazon.kinesis</groupId>
     <artifactId>amazon-kinesis-producer-sample</artifactId>
     <version>1.0.0</version>
     <build>
@@ -28,7 +28,7 @@
                         <configuration>
                             <transformers>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>com.amazonaws.services.kinesis.producer.sample.SampleProducer</mainClass>
+                                    <mainClass>software.amazon.kinesis.producer.sample.SampleProducer</mainClass>
                                 </transformer>
                             </transformers>
                         </configuration>
@@ -52,7 +52,7 @@
             </exclusions>
         </dependency>
         <dependency>
-            <groupId>com.amazonaws</groupId>
+            <groupId>software.amazon.kinesis</groupId>
             <artifactId>amazon-kinesis-producer</artifactId>
             <version>1.0.0</version>
         </dependency>
