--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -1,7 +1,7 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-    <groupId>com.amazonaws</groupId>
+    <groupId>software.amazon.kinesis</groupId>
     <artifactId>amazon-kinesis-producer</artifactId>
     <version>1.0.0</version>
     <name>Amazon Kinesis Producer Library</name>
@@ -36,7 +36,7 @@
                 <artifactId>maven-javadoc-plugin</artifactId>
                 <version>3.4.1</version>
                 <configuration>
-                    <excludePackageNames>com.amazonaws.services.kinesis.producer.protobuf</excludePackageNames>
+                    <excludePackageNames>software.amazon.kinesis.producer.protobuf</excludePackageNames>
                 </configuration>
                 <executions>
                     <execution>
